<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffff"
    tools:context=".MainActivity">

<LinearLayout
    android:id="@+id/tableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="#D6D5D5"
    app:layout_constraintTop_toTopOf="parent"
    android:orientation="vertical">

<!--app name-->
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/app_name"
        android:textSize="70sp"
        android:textStyle="bold"
        android:textAlignment="center"/>

    <!--edit text-->
    <EditText
        android:id="@+id/editText"
        android:layout_width="405dp"
        android:layout_height="200sp"
        android:background="@color/white"
        android:gravity="bottom|end"
        android:hint="@string/hint"
        android:inputType="numberDecimal"
        android:textColorHint="@color/black"
        android:textSize="50sp"
        android:padding="10dp"
        tools:ignore="Autofill" />

    <!--row one-->
    <LinearLayout
        android:id="@+id/row1"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/one_button"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/one"
            android:textColor="@color/black"
            android:textSize="55sp"
            app:backgroundTint="#9A9B9B" />

        <Button
            android:id="@+id/two_button"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/two"
            android:textColor="@color/black"
            android:textSize="55sp"
            app:backgroundTint="#9A9B9B" />

        <Button
            android:id="@+id/three_button"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/three"
            android:textColor="@color/black"
            android:textSize="55sp"
            app:backgroundTint="#9A9B9B" />

        <Button
            android:id="@+id/add_button"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/add"
            android:textColor="@color/black"
            android:textSize="55sp"
            app:backgroundTint="#9A9B9B" />

        <Button
            android:id="@+id/multiply_button"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/multiply"
            android:textColor="@color/black"
            android:textSize="55sp"
            app:backgroundTint="#9A9B9B" />
    </LinearLayout>

    <!--row two-->
    <LinearLayout
        android:id="@+id/row2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        tools:ignore="MissingPrefix"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/row1">

        <Button
            android:id="@+id/four_button"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/four"
            android:textColor="@color/black"
            android:textSize="55sp"
            app:backgroundTint="#9A9B9B" />

        <Button
            android:id="@+id/five_button"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/five"
            android:textColor="@color/black"
            android:textSize="55sp"
            app:backgroundTint="#9A9B9B" />

        <Button
            android:id="@+id/six_button"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/six"
            android:textColor="@color/black"
            android:textSize="55sp"
            app:backgroundTint="#9A9B9B" />

        <Button
            android:id="@+id/subtract_button"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/subtract"
            android:textColor="@color/black"
            android:textSize="55sp"
            app:backgroundTint="#9A9B9B" />

        <Button
            android:id="@+id/divide_button"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/divide"
            android:textColor="@color/black"
            android:textSize="55sp"
            app:backgroundTint="#9A9B9B" />

    </LinearLayout>

    <!--row three-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/seven_button"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/seven"
            android:textColor="@color/black"
            android:textSize="55sp"
            app:backgroundTint="#9A9B9B" />

        <Button
            android:id="@+id/eight_button"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/eight"
            android:textColor="@color/black"
            android:textSize="55sp"
            app:backgroundTint="#9A9B9B" />

        <Button
            android:id="@+id/nine_button"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/nine"
            android:textColor="@color/black"
            android:textSize="55sp"
            app:backgroundTint="#9A9B9B" />

        <Button
            android:id="@+id/sqrt_button"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="160dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:text="@string/sqrt"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:backgroundTint="#9A9B9B" />

    </LinearLayout>

    <!--row four-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/zero_button"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/zero"
            android:textColor="@color/black"
            android:textSize="55sp"
            app:backgroundTint="#9A9B9B" />

        <Button
            android:id="@+id/dot_button"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/dot"
            android:textColor="@color/black"
            android:textSize="55sp"
            app:backgroundTint="#9A9B9B"
            style="@style/Widget.AppCompat.Button"/>

        <Button
            android:id="@+id/equal_button"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/equal"
            android:textColor="@color/black"
            android:textSize="55sp"
            app:backgroundTint="#9A9B9B" />

        <Button
            android:id="@+id/clear_button"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="160dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:text="@string/clear"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:backgroundTint="#9A9B9B" />
    </LinearLayout>
</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>